force-app/main/default/objects/Consulting_Hours__c/Consulting_Hours__c.object-meta.xml
<CustomObject>
    <label>Consulting Hours</label>
    <nameField>
        <displayFormat>CRH-{0000}</displayFormat>
        <label>Consulting Hours #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consulting Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>