force-app/main/default/objects/Consulting_Hours__c/fields/Consultant2__c.field-meta.xml
<CustomField>
    <fullName>Consultant2__c</fullName>
    <formula>Request__r.Recipient__r.FirstName +&quot; &quot;+ Request__r.Recipient__r.LastName</formula>
    <label>Consultant</label>
    <type>Text</type>
</CustomField>