force-app/main/default/objects/Consulting_Hours__c/fields/Date_data_given_to_client__c.field-meta.xml
<CustomField>
    <fullName>Date_data_given_to_client__c</fullName>
    <label>Date data given to client</label>
    <type>Date</type>
</CustomField>