force-app/main/default/objects/Consulting_Hours__c/fields/Date_data_received__c.field-meta.xml
<CustomField>
    <fullName>Date_data_received__c</fullName>
    <label>Date data received</label>
    <type>Date</type>
</CustomField>