force-app/main/default/objects/Consulting_Hours__c/fields/of_Hours_actual__c.field-meta.xml
<CustomField>
    <fullName>of_Hours_actual__c</fullName>
    <label># of Hours actual</label>
    <precision>7</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>