force-app/main/default/objects/Consulting_Hours__c/fields/of_Hours_estimated__c.field-meta.xml
<CustomField>
    <fullName>of_Hours_estimated__c</fullName>
    <label># of Hours estimated</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>