force-app/main/default/objects/Consulting_Hours__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipName>Consult_Reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>